includedir = $(prefix)/include/libidmef

include_HEADERS = common.h			\
		  idmef.h			\
		  idmef-additional-data.h	\
		  idmef-class.h			\
		  idmef-criteria.h		\
		  idmef-criterion-value.h	\
		  idmef-data.h			\
		  idmef-message-helpers.h	\
		  idmef-message-id.h		\
		  idmef-message-print.h		\
		  idmef-message-write.h		\
		  idmef-message-print-json.h		\
		  idmef-object.h		\
		  idmef-path.h			\
		  idmef-time.h			\
		  idmef-tree-data.h		\
		  idmef-tree-wrap.h		\
		  idmef-value.h			\
		  idmef-value-type.h		\
		  prelude-extract.h		\
		  prelude-hash.h		\
		  prelude-linked-object.h	\
		  prelude-list.h		\
		  prelude-log.h			\
		  prelude-failover.h		\
		  prelude-ident.h		\
		  prelude-io.h			\
		  prelude-macros.h		\
		  prelude-message-id.h		\
		  prelude-string.h

nodist_include_HEADERS = prelude-inttypes.h

noinst_HEADERS = idmef-object-prv.h libmissing.h idmef-tree-data.h variable.h ntp.h

-include $(top_srcdir)/git.mk
